2010-09-14  Kenichi Handa  <handa@m17n.org>

	* ftfont.c (ftfont_check_otf): Fix the case of checking just
	existence of GSUB or GPOS.

2010-09-14  Juanma Barranquero  <lekktu@gmail.com>

	* cmds.c (syms_of_cmds) <post-self-insert-hook>: Fix typos in docstring.

2010-09-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* xml.c (parse_buffer): Renamed to parse_string(), since that's
	what it does.
	(parse_string): Return nil when the document can't be parsed.

2010-09-14  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.c (get_current_vm_state): New function.
	(do_ewmh_fullscreen): Call get_current_vm_state and compare with
	want_fullscreen so set_wm_state calls are few (Bug#7013).
	(x_handle_net_wm_state): Move code to get_current_vm_state and
	call that function.

2010-09-14  Courtney Bane  <emacs-bugs-7626@cbane.org>  (tiny change)

	* term.c (tty_set_terminal_modes): Don't initialize twice (bug#7002).

2010-09-14  Kenichi Handa  <handa@m17n.org>

	* coding.c (encode_coding_iso_2022): Don't optimize for ASCII if
	we may use designation or locking-shift.

2010-09-14  Kenichi Handa  <handa@m17n.org>

	* coding.c (detect_coding_emacs_mule): Fix checking of multibyte
	sequence when the source is multibyte.

2010-09-14  Andreas Schwab  <schwab@linux-m68k.org>

	* xml.c (Fxml_parse_string, Fxml_parse_string): Revert last change.
	Don't make first argument optional.  Doc fix.

2010-09-14  Leo  <sdl.web@gmail.com>  (tiny change)

	* xml.c (Fxml_parse_string, Fhtml_parse_string): Fix up the
	parameters for the doc string.

2010-09-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* xml.c (Fhtml_parse_string, Fxml_parse_string): Mention BASE-URL.

2010-09-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* fns.c (Fy_or_n_p): Move to lisp/subr.el.
	(syms_of_fns): Don't defsubr Sy_or_n_p.
	* lisp.h: Don't declare Fy_or_n_p.
	* fileio.c (barf_or_query_if_file_exists): Fy_or_n_p -> y-or-n-p.

2010-09-09  Lars Magne Ingebrigtsen  <larsi@gnus.org>
