@@ -1,3 +1,7 @@
+2010-09-17  Kenichi Handa  <handa@m17n.org>
+
+	* ftfont.c (ftfont_check_otf): Fix previous change.
+
 2010-09-14  Kenichi Handa  <handa@m17n.org>
 
 	* ftfont.c (ftfont_check_otf): Fix the case of checking just
